# dsa-spec

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md
dsa-spec/: Cargo.toml
dsa-spec/benches/: complexity.rs  generate_all.rs  parse.rs
dsa-spec/src/: assertion.rs  ast.rs  backend.rs  casing.rs  complexity.rs  context.rs  contracts.rs  csharp_backend.rs  doc_gen.rs  error.rs  go_backend.rs  lib.rs  main.rs  migrate.rs  parser.rs  python_backend.rs  rust_backend.rs  spec_schema.rs  template_engine.rs  typescript_backend.rs  validator.rs  visualization.rs
dsa-spec/templates/: csharp.cs.tera  go.go.tera  python.py.tera  rust.rs.tera  typescript.ts.tera
dsa-spec/templates/csharp/: class.cs.tera  method.cs.tera
dsa-spec/templates/go/: class.go.tera  method.go.tera
dsa-spec/templates/python/: class.py.tera  method.py.tera
dsa-spec/templates/rust/: class.rs.tera  method.rs.tera
dsa-spec/templates/typescript/: class.ts.tera  method.ts.tera
dsa-spec/tests/: cli.rs  csharp_backend.rs  go_backend.rs  golden_tests.rs  python_backend.rs  rust_backend.rs  spec_integration.rs  typescript_backend.rs
dsa-spec/tests/golden/: avl_cs.golden  avl_go.golden  avl_py.golden  avl_rs.diff  avl_rs.golden  avl_ts.golden  bfs_cs.golden  bfs_go.golden  bfs_py.golden  bfs_rs.golden  bfs_ts.golden  binary_search_cs.golden  binary_search_go.golden  binary_search_py.golden  binary_search_rs.golden  binary_search_ts.golden  bst_cs.golden  bst_go.golden  bst_py.golden  bst_rs.golden  bst_ts.golden  circular_buffer_cs.golden  circular_buffer_go.golden  (+68 more)
(+33 files in other folders)
